shawk - top level makefile added

--- a/shawk/awk/awklib/makefile
+++ b/shawk/awk/awklib/makefile
@@ -1,8 +1,12 @@
 .PHONY: help
 help:
-	@echo 'test  - run tests'
-	@echo 'testv - like test but verbose'
-	@echo 'help  - this screen'
+	@echo 'make all   - does nothing'
+	@echo 'make test  - run tests'
+	@echo 'make testv - like test but verbose'
+	@echo 'make help  - this screen'
+
+.PHONY: all
+all:
 
 .PHONY: test
 test:
