--- a/shawk/awk/smpg/makefile
+++ b/shawk/awk/smpg/makefile
@@ -1,9 +1,18 @@
 .PHONY: help
 help:
-	@echo 'test  - run tests'
-	@echo 'testv - like test but verbose'
-	@echo 'gen   - print the command used to generate smpg.awk'
-	@echo 'help  - this screen'
+	@echo 'make all   - smpg test clean'
+	@echo 'make smpg  - generate smpg'
+	@echo 'make test  - run tests'
+	@echo 'make testv - like test but verbose'
+	@echo 'make gen   - print the command used to generate smpg.awk'
+	@echo 'make help  - this screen'
+
+.PHONY: all
+all: smpg test clean
+
+.PHONY: smpg
+smpg:
+	mv -v smpg.awk smpg.awk.old && awk -f smpg.awk.old self.smpg > smpg.awk
 
 .PHONY: test
 test:
@@ -17,3 +26,7 @@ testv:
 gen:
 	@echo '# generates itself'
 	@echo awk -f smpg.awk self.smpg
+
+.PHONY: clean
+clean:
+	rm -f smpg.awk.old
