lex-build - lex-c.awk 1.42 -> 1.5

--- a/shawk/awk/lex-build/makefile
+++ b/shawk/awk/lex-build/makefile
@@ -10,6 +10,7 @@ LIBS += ../awklib/src/awklib_prefix_tree.awk
 LEX_LIB = ./src/common/lb_lib.awk
 LEX_FIRST = ./src/lex-first/_lex-first.awk
 LEX_C = ./src/lex-c/_lex-c.awk
+LEX_C_LIB = ../awklib/src/awklib_sort.awk ../awklib/src/awklib_bitwise.awk
 LEX_AWK = ./src/lex-awk/_lex-awk.awk
 
 ALL = lib lex-first lex-c lex-awk
@@ -24,7 +25,12 @@ help:
 	@echo 'make lex-first - generate lex-first.awk'
 	@echo 'make lex-c     - generates the C translator'
 	@echo 'make lex-awk   - generates the awk translator'
+	@echo 'make regen     - regenerate lexer + c-vs-lex'
 	@echo 'make help      - this screen'
+
+.PHONY: regen
+regen: all
+	cd ./c-vs-flex && $(MAKE) -B all CFLAGS=-O3 && $(MAKE) awk && $(MAKE) clean
 
 .PHONY: all
 all: $(ALL)
@@ -51,7 +57,7 @@ lex-first.awk: $(LEX_FIRST) $(LEX_LIB)
 
 .PHONY: lex-c
 lex-c: lex-c.awk
-lex-c.awk: $(LEX_C) $(LEX_LIB)
+lex-c.awk: $(LEX_C) $(LEX_LIB) $(LEX_C_LIB)
 	cat $^ > $@
 
 .PHONY: lex-awk
