rdpg rdpg-to-c.awk 2.2.0

--- a/shawk/awk/rdpg/src/backends/parser/makefile
+++ b/shawk/awk/rdpg/src/backends/parser/makefile
@@ -22,7 +22,7 @@ PERF_TESTS := $(TEST_DIR)/performed_tests.txt
 EXP_TESTS  := $(TEST_DIR)/expected_tests.txt
 RUN_TESTS  := $(AWK) -f $(PARSER) && $(TEST_DIR)/run-tests.sh
 RUN_TESTSV := $(RUN_TESTS) x
-RUN_SURE   := $(RUN_TESTSV) > $(PERF_TESTS) && grep -E '^test_[^ ]+' $(PERF_TESTS) | diff /dev/stdin $(EXP_TESTS)
+RUN_SURE   := $(RUN_TESTSV) > $(PERF_TESTS) && grep -E '^test_[^ ]+' $(PERF_TESTS) | diff /dev/stdin $(EXP_TESTS) && rm $(PERF_TESTS)
 # </tests>
 $(TARGET) : $(PARSER)
 	$(RUN_SURE) && cp -v $(PARSER) $(TARGET)
