--- a/shawk/awk/rdpg/src/backends/to-c/enum/makefile
+++ b/shawk/awk/rdpg/src/backends/to-c/enum/makefile
@@ -1,37 +1,39 @@
 SHELL := bash
 AWK := awk
 
-LEXER := _lexer.awk
-TARGET := ../parts/$(LEXER)
+ENUM := _enum.awk
+TARGET := ../parts/$(ENUM)
 
 .PHONY: help
 help:
-	@echo 'make target - lexer + sure + place in parent dir'
-	@echo 'make lexer  - compile the lexer'
-	@echo 'make sure   - test + check'
+	@echo 'make target - enum + sure + place to parent dir'
+	@echo 'make enum   - compile enum'
 	@echo 'make test   - run tests'
-	@echo 'make testv  - verbose tests'
+	@echo 'make testv  - run tests verbosely'
+	@echo 'make sure   - make sure all tests run'
 	@echo 'make help   - this screen'
 
 .PHONY: target
-target: $(TARGET)
+target: enum $(TARGET)
 
 # <tests>
 TEST_DIR   := ./tests
 PERF_TESTS := $(TEST_DIR)/performed_tests.txt
 EXP_TESTS  := $(TEST_DIR)/expected_tests.txt
-RUN_TESTS  := $(AWK) -f $(LEXER) && $(TEST_DIR)/run-tests.sh
+RUN_TESTS  := $(TEST_DIR)/run-tests.sh
 RUN_TESTSV := $(RUN_TESTS) x
 RUN_SURE   := $(RUN_TESTSV) > $(PERF_TESTS) && grep -E '^test_[^ ]+' $(PERF_TESTS) | diff /dev/stdin $(EXP_TESTS) && rm $(PERF_TESTS)
 # </tests>
-$(TARGET): $(LEXER)
-	$(RUN_SURE) && cp -v $(LEXER) $(TARGET)
 
-.PHONY: lexer
-lexer: $(LEXER)
+$(TARGET): $(ENUM)
+	$(RUN_SURE) && cp -v $(ENUM) $(TARGET)
 
-$(LEXER): parts/$(LEXER) ../../../common/_rdpg_ir.awk
-	(echo "# <lexer>"; cat $^; echo "# </lexer>") > $@
+.PHONY: enum
+enum: $(ENUM)
+
+PARTS := parts/_enum.awk
+$(ENUM): $(PARTS)
+	cat $^ > $@
 
 .PHONY: test
 test:
