--- a/shawk/awk/rdpg/src/backends/to-c/makefile
+++ b/shawk/awk/rdpg/src/backends/to-c/makefile
@@ -24,17 +24,23 @@ PERF_TESTS := $(TEST_DIR)/performed_tests.txt
 EXP_TESTS  := $(TEST_DIR)/expected_tests.txt
 RUN_TESTS  := ../tests/run-tests.sh ../to-c/test-base/src.sh
 RUN_TESTSV := $(RUN_TESTS) x
-RUN_SURE   := $(RUN_TESTSV) > $(PERF_TESTS) && grep -E '^test_[^ ]+' $(PERF_TESTS) | diff /dev/stdin $(EXP_TESTS)
+RUN_SURE   := $(RUN_TESTSV) > $(PERF_TESTS) && grep -E '^test_[^ ]+' $(PERF_TESTS) | diff /dev/stdin $(EXP_TESTS) && rm $(PERF_TESTS)
 # </tests>
 $(TARGET): $(TO_C)
 	$(RUN_SURE) && cp -v $(TO_C) $(TARGET) && chmod +x $(TARGET)
 
+.PHONY: parts
+parts:
+	pushd ./enum && $(MAKE) target && popd
+
 .PHONY: to-c
-to-c: $(TO_C)
+to-c: parts $(TO_C)
 
 PARTS := parts/_to_c.awk
+PARTS += parts/_enum.awk
 PARTS += ../common/_parser.awk
 PARTS += ../common/_main.awk
+PARTS += ../../../../awklib/src/awklib_read.awk
 $(TO_C): $(PARTS)
 	cat $^ > $@
 
