rdpg rdpg-to-awk 2.1.3, rdpg-to-c 2.2.4

--- a/shawk/awk/rdpg/src/backends/parser/lexer/makefile
+++ b/shawk/awk/rdpg/src/backends/parser/lexer/makefile
@@ -34,7 +34,10 @@ $(TARGET): $(LEXER)
 .PHONY: lexer
 lexer: $(LEXER)
 
-$(LEXER): parts/$(LEXER) ../../../common/_rdpg_ir.awk
+PARTS := parts/$(LEXER)
+PARTS += parts/_tok.awk
+PARTS += ../../../common/_rdpg_ir.awk
+$(LEXER): $(PARTS)
 	(echo "# <lexer>" && cat $^ && echo "# </lexer>") > $@
 
 .PHONY: test
